<resources>
    <string name="app_name">Android project</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Boxe Tracker</string>
    <string name="nav_header_subtitle" translatable="false">alexandre.debeaudrap@edu.ece.fr</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_newmatch">New Match</string>
    <string name="menu_dataaccess">Previous Match</string>


    <string name="home_second" translatable="false">Home Second</string>
    <string name="joueur1_newmatch">Name Player 1</string>
    <string name="joueur2_newmatch">Name Player 2</string>
    <string name="joueur1_newmatch2">Player 1</string>
    <string name="joueur2_newmatch2">Player 2</string>
    <string name="categories_newmatch">Categories</string>
    <string name="choice_categ_2">Heavy Weight</string>
    <string name="choice_categ_3">Heavy Weight</string>
    <string name="location_newmatch">Location (need wifi &amp; position):</string>
    <string name="Button_run_newmatch">Run</string>
    <string name="coup_de_npoint_r_ussis">Hand punch\n successful : </string>
    <string name="coup_de_npied_r_ussis">Foot kick\n successful : </string>
    <string name="coup_de_npoint_manqu">Hand punch\n unsuccessful : </string>
    <string name="coup_de_npied_manqu">Foot kick\n unsuccessful : </string>
    <string name="prefixtextphoto">You got : </string>
    <string name="sufixtextphoto"> pictures, they will be available in the review.</string>
    <string name="take_photo">Take Photo</string>
    <string name="you_have_no_pictures_yet_max_10_pics">You have no pictures yet, max 10 pics.</string>
    <string name="saved_localy">Saved Localy</string>
    <string name="saved_on_server">Saved on Server</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="unknown">unknown</string>
    <string name="_10_max">10 max</string>
    <string name="finish">finish</string>
    <string name="domination">Domination</string>
    <string name="parity_hand_foot">Parity hand foot</string>
    <string name="ratio_kick_usefull">Ratio kick usefull</string>
    <string name="Defense_global">Deffense Global</string>
    <string name="stat_of_the_match">Statistics of the Match</string>
    <string name="basic_data">Basic Data</string>
    <string name="photos_gallery">"Photos Gallery"</string>
    <string name="choice_categ_1">Light Weight</string>
    <string name="welcome_on_boxe_tracker">Welcome on Boxe Tracker</string>
    <string name="current_match">Current Match</string>



</resources>
