<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_newmatch"
            app:destination="@id/nav_newmatch" />
        <action
            android:id="@+id/action_nav_home_to_nav_dataaccess"
            app:destination="@id/nav_dataaccess" />

    </fragment>

    <fragment
        android:id="@+id/nav_dataaccess"
        android:name="com.example.androidproject.ui.dataaccess.dataaccess"
        android:label="@string/menu_dataaccess"
        tools:layout="@layout/dataaccess_fragment" />

    <fragment
        android:id="@+id/nav_newmatch"
        android:name="com.example.androidproject.ui.newmatch.newmatch"
        android:label="@string/menu_newmatch"
        tools:layout="@layout/newmatch_fragment" />
</navigation>