<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newmatch.newmatch">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joueur1_newmatch"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joueur2_newmatch"
                android:textSize="20sp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp">
            </TextView>
        </LinearLayout>





        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/joueur1_newmatch2"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                >
            </EditText>

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/joueur2_newmatch2"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories_newmatch"
                android:textSize="20sp" >
            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_newmatch"
                android:textSize="20sp" >
            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="unknown"
                android:textSize="20sp" >
            </TextView>


        </LinearLayout>







        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dip"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button_run_newmatch"
                android:textSize="20sp" >
            </Button>


        </LinearLayout>






    </LinearLayout>

</FrameLayout>