<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_margin="4dp"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/epaisseur_cadre"
            android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <View
                android:layout_width="@dimen/epaisseur_cadre"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start">
                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/joueur1_newmatch"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="20sp" >
                    </TextView>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_blue_dark" />


                <LinearLayout
                    android:id="@+id/LayoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="4">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="myClickHandler"
                                android:textColor="@android:color/holo_green_dark"
                                android:tag="1"
                                android:text="@string/coup_de_npoint_r_ussis"
                                />

                            <Button android:id="@+id/button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="myClickHandler"
                                android:textColor="@android:color/holo_green_dark"
                                android:tag="2"
                                android:text="@string/coup_de_npied_r_ussis" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button android:id="@+id/button4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="myClickHandler"
                                android:textColor="@android:color/holo_red_dark"
                                android:tag="3"
                                android:text="@string/coup_de_npoint_manqu" />

                            <Button android:id="@+id/button5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@android:color/holo_red_dark"
                                android:tag="4"
                                android:text="@string/coup_de_npied_manqu" />


                        </LinearLayout>



                    </LinearLayout>

                </LinearLayout>









            </LinearLayout>


            <View
                android:layout_width="@dimen/epaisseur_cadre"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/epaisseur_cadre"
            android:background="@android:color/holo_blue_dark" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>